# cargo-tree-tui

./: Cargo.toml  README.md  _typos.toml
.github/workflows/: rust.yml
benches/: frame_rendering.rs  mod.rs  performance.rs  terminal_init.rs  tree_loading.rs  tree_operations.rs
src/core/: dependency.rs  mod.rs
src/ops/tree/tui/: help.rs  mod.rs  state.rs  widget.rs  widget_state.rs
src/ops/tree/tui/widget/: breadcrumb.rs  lineage.rs  mod.rs  render.rs  state.rs  style.rs  view_cache.rs  viewport.rs
tests/: common.rs  dependency.rs  render.rs
